# post-code-summary

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  feedback.html  main.py  pyproject.toml  run.sh  server.py
pre_commit_hooks/: client.py  model.py  notification.py  post-code-summary.py  post_code_summary.py  prompt.py  ui.py
pre_commit_hooks/utils/: client.py  ui.py
